--- a/aboutus.css
+++ b/aboutus.css
@@ -145,53 +145,288 @@ h1 {
   color: red;
 }
 
-* {  margin: 0;  padding: 0;  box-sizing: border-box;  font-family: Arial, Helvetica, sans-serif;}
-body {  background-color: #9E9B9B;  margin: 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
-/* nav bar starts here */header {  background-color: #D9D9D9;  display: flex;  justify-content: space-between;}
-#logo {  margin-left: 20px;  max-width: 50%;  padding: 10px;}
-.nav-bar {  padding: 20px;}
-ul {  margin: 0;  padding: 0;  display: flex;}
-li {  list-style: none;  padding: 20px;  font-size: 2vw;}
-li a {  text-decoration: none;  color: black;}
-li a:hover {  color: beige;}
+
+body {
+  background-color: #9E9B9B;
+  margin: 0;
+}
+
+/* nav bar starts here */
+header {
+  background-color: #D9D9D9;
+  display: flex;
+  justify-content: space-between;
+}
+
+#logo {
+  margin-left: 20px;
+  max-width: 50%;
+  padding: 10px;
+}
+
+.nav-bar {
+  padding: 20px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+li {
+  list-style: none;
+  padding: 20px;
+  font-size: 2vw;
+}
+
+li a {
+  text-decoration: none;
+  color: black;
+}
+
+li a:hover {
+  color: beige;
+}
+
 /* nav bar ends here */
-.hero-image {  background-image: url(pics/bus.jpeg);  height: 13vh;  background-repeat: no-repeat;  background-size: cover;  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("pics/bus.jpeg");
+.hero-image {
+  background-image: url(pics/bus.jpeg);
+  height: 13vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("pics/bus.jpeg");
 }
-.hero-text {  color: white;  font-family: Arial, Helvetica, sans-serif;  font-size: 40px;}
-form {  max-width: 550px;  width: 90%;  background: #D9D9D9;  margin: 17vh auto 0 auto;  padding: 40px;  border-radius: 3px;  box-sizing: border-box;  margin-bottom: 17vh;}
-h1 {  margin: 0;  text-align: center;}
-label {  display: block;  margin: 20 px o;
+
+.hero-text {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
 }
-input,textarea {  width: 100%;  padding: 10px;  box-sizing: border-box;  outline: none;  resize: none;  border: none;  border-bottom: 1px solid rgb(11, 11, 11);
+
+form {
+  max-width: 550px;
+  width: 90%;
+  background: #D9D9D9;
+  margin: 17vh auto 0 auto;
+  padding: 40px;
+  border-radius: 3px;
+  box-sizing: border-box;
+  margin-bottom: 17vh;
 }
-input[type="text"]:focus,textarea:focus {  border-bottom: 1px solid red;
+
+h1 {
+  margin: 0;
+  text-align: center;
 }
-.center {  text-align: center;}button{  background: green;  width: 100px;	border: none;	outline: none;	color: white;	height: 35px;	border-radius: 30px;	margin-top: 20px;	box-shadow: 0px 5px 15px 0px rgba(28,0,181,0.2) ;
+
+label {
+  display: block;
+  margin: 20 px o;
 }
-input[type="submit"] {  margin-top: 30px;  width: 90%;  max-width: 200px;  background: green;  color: white;  font-size: 17px;  cursor: pointer;  border-radius: 3px;}
-/* footer starts here */.footer-container {  background-color: #fff;  /* padding-bottom: 4rem; */}
-.footer-responsive {  background-color: rgba(0, 0, 0, 0.415);  box-sizing: border-box;  widows: 100%;  text-align: center;  font: bold 16px san-serif;  padding: 10px 10px 20px 10px;  margin-top: 80px;}
-.footer-responsive .footer-left,.footer-responsive .footer-center,.footer-responsive .footer-right {  display: inline-block;  vertical-align: top;}
-.footer-responsive .footer-left {  width: 30%;}
-.footer-responsive h3 {  color: white;  font: normal 36px 'cookie', cursive;  margin: 0;}
-/* .footer-responsive h3 span{  color:} */.footer-responsive .footer-links {  color: white;  margin: 20px 0 12px;}
-.footer-responsive .footer-links a {  display: inline-block;  line-height: 1.8;  text-decoration: none;  color: inherit;}
-.footer-responsive .footer-company-name {  color: #8F9296;  font-size: 14px;  font-weight: normal;  margin: 0;}
-.footer-responsive .footer-center {  width: 35%;  font-family: 'Cairo', sans-serif;
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  outline: none;
+  resize: none;
+  border: none;
+  border-bottom: 1px solid rgb(11, 11, 11);
 }
-.address,.phone,.email {  background-color: rgb(113, 170, 188);  color: white;  border: 2px solid rgb(255, 255, 255);  font-size: 25px;  width: 38px;  height: 38px;  border-radius: 50%;  text-align: center;  line-height: 42px;  margin: 10px 15px;  vertical-align: middle;}
-.address,.phone,.email {  height: 1.5rem;  width: 1.5rem;  font-size: 17px;  line-height: 38px;  text-align: center;}
-.footer-responsive .footer-center p {  display: inline-block;  color: white;  vertical-align: middle;  margin: 0;}
-.footer-responsive .footer-right {  width: 30%;
+
+input[type="text"]:focus,
+textarea:focus {
+  border-bottom: 1px solid red;
 }
-.footer-responsive .footer-about {  line-height: 20px;  color: white;  font-size: 13px;  font-weight: normal;  margin: 0;  font-family: 'Cairo', sans-serif;}
-.footer-responsive .footer-about span {  display: block;  color: #92999F;  font-size: 18px;  font-weight: bold;  margin-bottom: 20px;}
-.footer-responsive .footer-icons {  margin-top: 25px;}
-.footer-responsive .footer-icons a {  display: inline-block;  width: 37.5px;  height: 36.5px;  cursor: pointer;  background-color: #FFFFFF;  border: 2px solid white;  border-radius: 50%;  /* font-size: 20px; */  color: white;  text-align: center;  margin-right: 10px;  margin-bottom: 0px;}
-.footer-responsive .footer-icons a:hover {  background-color: steelblue;  border: 2px solid steelblue;
+
+.center {
+  text-align: center;
 }
-.footer-links a:hover {  color: steelblue;}
+
+button {
+  background: green;
+  width: 100px;
+  border: none;
+  outline: none;
+  color: white;
+  height: 35px;
+  border-radius: 30px;
+  margin-top: 20px;
+  box-shadow: 0px 5px 15px 0px rgba(28, 0, 181, 0.2);
+}
+
+input[type="submit"] {
+  margin-top: 30px;
+  width: 90%;
+  max-width: 200px;
+  background: green;
+  color: white;
+  font-size: 17px;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+/* footer starts here */
+.footer-container {
+  background-color: #fff;
+  /* padding-bottom: 4rem; */
+}
+
+.footer-responsive {
+  background-color: rgba(0, 0, 0, 0.415);
+  box-sizing: border-box;
+  widows: 100%;
+  text-align: center;
+  font: bold 16px san-serif;
+  padding: 10px 10px 20px 10px;
+  margin-top: 80px;
+}
+
+.footer-responsive .footer-left,
+.footer-responsive .footer-center,
+.footer-responsive .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.footer-responsive .footer-left {
+  width: 30%;
+}
+
+.footer-responsive h3 {
+  color: white;
+  font: normal 36px 'cookie', cursive;
+  margin: 0;
+}
+
+/* .footer-responsive h3 span{  color:} */
+.footer-responsive .footer-links {
+  color: white;
+  margin: 20px 0 12px;
+}
+
+.footer-responsive .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-responsive .footer-company-name {
+  color: #8F9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-responsive .footer-center {
+  width: 35%;
+  font-family: 'Cairo', sans-serif;
+}
+
+.address,
+.phone,
+.email {
+  background-color: rgb(113, 170, 188);
+  color: white;
+  border: 2px solid rgb(255, 255, 255);
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+
+.address,
+.phone,
+.email {
+  height: 1.5rem;
+  width: 1.5rem;
+  font-size: 17px;
+  line-height: 38px;
+  text-align: center;
+}
+
+.footer-responsive .footer-center p {
+  display: inline-block;
+  color: white;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.footer-responsive .footer-right {
+  width: 30%;
+}
+
+.footer-responsive .footer-about {
+  line-height: 20px;
+  color: white;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+  font-family: 'Cairo', sans-serif;
+}
+
+.footer-responsive .footer-about span {
+  display: block;
+  color: #92999F;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer-responsive .footer-icons {
+  margin-top: 25px;
+}
+
+.footer-responsive .footer-icons a {
+  display: inline-block;
+  width: 37.5px;
+  height: 36.5px;
+  cursor: pointer;
+  background-color: #FFFFFF;
+  border: 2px solid white;
+  border-radius: 50%;
+  /* font-size: 20px; */
+  color: white;
+  text-align: center;
+  margin-right: 10px;
+  margin-bottom: 0px;
+}
+
+.footer-responsive .footer-icons a:hover {
+  background-color: steelblue;
+  border: 2px solid steelblue;
+}
+
+.footer-links a:hover {
+  color: steelblue;
+}
+
 @media(max-width:880px) {
-  .footer-responsive .footer-links,  .footer-responsive .footer-center,  .footer-responsive .footer-right {      display: block;      width: 100%;      margin-bottom: 40px;      text-align: center  }
-  .address,  .phone,  .email {      margin-left: 0;  }
+
+  .footer-responsive .footer-links,
+  .footer-responsive .footer-center,
+  .footer-responsive .footer-right {
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center
+  }
+
+  .address,
+  .phone,
+  .email {
+    margin-left: 0;
+  }
