--- a/public/contact.css
+++ b/public/contact.css
@@ -73,7 +73,7 @@ form {
   width: 90%;
   background: #D9D9D9;
   margin: 17vh auto 0 auto;
-  padding: 40px;
+  padding: 30px;
   border-radius: 3px;
   box-sizing: border-box;
   margin-bottom: 17vh;
@@ -82,6 +82,13 @@ form {
 h1 {
   margin: 0;
   text-align: center;
+
+}
+h2{
+margin: 0px;
+text-align: center;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 60px;
 }
 
 label {
@@ -122,18 +129,6 @@ button{
 	margin-top: 20px;
 	box-shadow: 0px 5px 15px 0px rgba(28,0,181,0.2) ;
 
-
-}
-
-input[type="submit"] {
-  margin-top: 30px;
-  width: 90%;
-  max-width: 200px;
-  background: green;
-  color: white;
-  font-size: 17px;
-  cursor: pointer;
-  border-radius: 3px;
 }
 
 /* footer starts here */
