--- a/public/contact.css
+++ b/public/contact.css
@@ -72,7 +72,7 @@ form {
   max-width: 550px;
   width: 90%;
   background: #D9D9D9;
-  margin: 17vh auto 0 auto;
+  margin: 13vh auto 0 auto;
   padding: 30px;
   border-radius: 3px;
   box-sizing: border-box;
@@ -84,11 +84,13 @@ h1 {
   text-align: center;
 
 }
-h2{
-margin: 0px;
-text-align: center;
-font-family: Arial, Helvetica, sans-serif;
-font-size: 60px;
+
+h2 {
+  margin: 0px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 60px;
+  padding-top: 30px;
 }
 
 label {
@@ -118,16 +120,17 @@ textarea:focus {
 .center {
   text-align: center;
 }
-button{
+
+button {
   background: green;
   width: 100px;
-	border: none;
-	outline: none;
-	color: white;
-	height: 35px;
-	border-radius: 30px;
-	margin-top: 20px;
-	box-shadow: 0px 5px 15px 0px rgba(28,0,181,0.2) ;
+  border: none;
+  outline: none;
+  color: white;
+  height: 35px;
+  border-radius: 30px;
+  margin-top: 20px;
+  box-shadow: 0px 5px 15px 0px rgba(28, 0, 181, 0.2);
 
 }
 
@@ -282,14 +285,14 @@ button{
   .footer-responsive .footer-links,
   .footer-responsive .footer-center,
   .footer-responsive .footer-right {
-      display: block;
-      width: 100%;
-      margin-bottom: 40px;
-      text-align: center
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center
   }
 
   .address,
   .phone,
   .email {
-      margin-left: 0;
+    margin-left: 0;
   }
