--- a/public/home.css
+++ b/public/home.css
@@ -355,7 +355,7 @@ input[type="submit"] {
 
 .footer-responsive .footer-about span {
     display: block;
-    color: #92999F;
+    color: #92999f;
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 20px;
