--- a/public/aboutus.css
+++ b/public/aboutus.css
@@ -62,15 +62,16 @@ li a:hover {
 }
 
 .hero-text {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:40px; 
-  }
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+}
 
 h1 {
   margin: 0;
   text-align: center;
 }
+
 .items {
 
   font-size: 20px;
@@ -83,10 +84,10 @@ h1 {
 .container {
   display: grid;
   grid-template-columns: auto auto auto;
-  margin-bottom:17vh ;
+  margin-bottom: 17vh;
 }
 
-.containeragain{
+.containeragain {
   display: grid;
   grid-template-columns: 25% 25% 25%;
   grid-gap: 2em;
@@ -96,7 +97,7 @@ h1 {
   font-size: large;
 }
 
-.containeragain2{
+.containeragain2 {
   display: grid;
   grid-template-columns: 25% 25%;
   grid-gap: 2em;
@@ -104,44 +105,44 @@ h1 {
   align-items: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: large;
-  
+
 }
 
- .containeragain > div{
+.containeragain>div {
   background: #9E9B9B;
-  box-shadow: 0 0 20px rgba(72,98,85, 0.6); 
-  text-align: center;
-} 
-
-.containeragain2 > div{
-  background: #9E9B9B;
-  box-shadow: 0 0 20px rgba(72,98,85, 0.6);
+  box-shadow: 0 0 20px rgba(72, 98, 85, 0.6);
   text-align: center;
 }
 
-.ourteam{
+.containeragain2>div {
+  background: #9E9B9B;
+  box-shadow: 0 0 20px rgba(72, 98, 85, 0.6);
+  text-align: center;
+}
+
+.ourteam {
   color: red;
   font-size: 50px;
   text-align: center;
 }
 
-.A{
+.A {
   color: red;
 }
 
-.P{
+.P {
   color: red;
 }
 
-.I{
+.I {
   color: red;
 }
 
-.L{
+.L {
   color: red;
 }
 
-.H{
+.H {
   color: red;
 }
 
