--- a/public/style.css
+++ b/public/style.css
@@ -1,63 +1,88 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
   background-color: #D9D9D9;
   display: flex;
   justify-content: space-between;
 }
+
 #logo {
   margin-left: 20px;
   max-width: 50%;
   padding: 10px;
 }
+
 .nav-bar {
   padding: 20px;
 }
+
 ul {
   margin: 0;
   padding: 0;
   display: flex;
 }
+
 li {
   list-style: none;
   padding: 20px;
   font-size: 2vw;
 }
+
 li a {
   text-decoration: none;
   color: black;
 }
+
 li a:hover {
   color: beige;
 }
-body{
+
+body {
   background-color: #D9D9D9;
 }
 
-.container{
+.container1 {
   width: 85%;
+  background-color: white;
 }
-h1{
+
+h1 {
   text-align: center;
   font-size: 46px;
 }
-#canvas{
+
+#canvas {
   width: 100%;
 }
-.footer-container { 
-  background-color: #fff;  
+
+.footer-container {
+  background-color: #fff;
   /* padding-bottom: 4rem; */
 }
-.footer-responsive {  background-color: rgba(0, 0, 0, 0.415);
-  box-sizing: border-box;  widows: 100%; 
-  text-align: center;  
-  font: bold 16px san-serif;  
+
+.footer-responsive {
+  background-color: rgba(0, 0, 0, 0.415);
+  box-sizing: border-box;
+  widows: 100%;
+  text-align: center;
+  font: bold 16px san-serif;
   padding: 10px 10px 20px 10px;
 }
-.footer-responsive .footer-left,.footer-responsive .footer-center,.footer-responsive .footer-right { 
-   display: inline-block;
-     vertical-align: top;
-  }
+
+.footer-responsive .footer-left,
+.footer-responsive .footer-center,
+.footer-responsive .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
 .footer-responsive .footer-left {
-        width: 30%;
+  width: 30%;
 }
 
 .footer-responsive h3 {
@@ -65,29 +90,40 @@ h1{
   font: normal 36px 'cookie', cursive;
   margin: 0;
 }
-/* .footer-responsive h3 span{  color:} */.footer-responsive .footer-links {  
+
+/* .footer-responsive h3 span{  color:} */
+.footer-responsive .footer-links {
   color: white;
   margin: 20px 0 12px;
 }
-.footer-responsive .footer-links a { 
+
+.footer-responsive .footer-links a {
   display: inline-block;
   line-height: 1.8;
-  text-decoration: none; 
-  color: inherit;}
-.footer-responsive .footer-company-name {  
-  color: #8F9296; 
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-responsive .footer-company-name {
+  color: #8F9296;
   font-size: 14px;
   font-weight: normal;
   margin: 0;
 }
-.footer-responsive .footer-center { 
+
+.footer-responsive .footer-center {
   width: 35%;
   font-family: 'Cairo', sans-serif;
 }
-.address,.phone,.email {  background-color: rgb(113, 170, 188);
-  color: white;  
+
+.address,
+.phone,
+.email {
+  background-color: rgb(113, 170, 188);
+  color: white;
   border: 2px solid rgb(255, 255, 255);
-  font-size: 25px;  width: 38px; 
+  font-size: 25px;
+  width: 38px;
   height: 38px;
   border-radius: 50%;
   text-align: center;
@@ -95,29 +131,37 @@ h1{
   margin: 10px 15px;
   vertical-align: middle;
 }
-.address,.phone,.email {  
+
+.address,
+.phone,
+.email {
   height: 1.5rem;
   width: 1.5rem;
   font-size: 17px;
   line-height: 38px;
   text-align: center;
 }
+
 .footer-responsive .footer-center p {
   display: inline-block;
   color: white;
   vertical-align: middle;
   margin: 0;
 }
-.footer-responsive .footer-right {  width: 30%;
+
+.footer-responsive .footer-right {
+  width: 30%;
 }
+
 .footer-responsive .footer-about {
   line-height: 20px;
-  color: white;  
+  color: white;
   font-size: 13px;
   font-weight: normal;
   margin: 0;
   font-family: 'Cairo', sans-serif;
 }
+
 .footer-responsive .footer-about span {
   display: block;
   color: #92999F;
@@ -142,11 +186,14 @@ h1{
   color: white;
   text-align: center;
   margin-right: 10px;
-  margin-bottom: 0px;}
+  margin-bottom: 0px;
+}
+
 .footer-responsive .footer-icons a:hover {
   background-color: steelblue;
   border: 2px solid steelblue;
 }
+
 .footer-links a:hover {
   color: steelblue;
 }
