--- a/public/style.css
+++ b/public/style.css
@@ -42,6 +42,20 @@ li a:hover {
   color: beige;
 }
 
+.wrapper {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)), url('public/pics/kidsmile.jpeg');
+  /* background-image: url(/HopeHacksImg/kidsmile.jpeg); */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  padding: 40px;
+}
+
 body {
   background-color: #D9D9D9;
 }
